Fix hero body and image not aligning
* Originally, the image placeholder was a bit shorter than the height
  of the hero body. This was fixed by adding height to the container.

* By centering .hero-body, these line up without height adjustments.

--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ footer {
 .image {
   background-color: #69707e;
   justify-content: center;
-  height: 235px;
   width: 510px;
 }
 
@@ -78,6 +77,7 @@ footer {
   display: flex;
   flex-direction: column;
   width: 400px;
+  justify-content: center;
 }
 
 .text {
